add three endpoints forgetPassword verivayResetCodeForPassword resetPassword
