# routes/authRoute.js
@@ -3,13 +3,18 @@ const express = require('express');
 const router = express.Router();
 const {
   signup,
-  varifyResetCode,
-  login
+  varifyResetCodeForSignup,
+  login,
+  varifyResetCodeForPassword,
+  forgetPassword,
+  resetPassword
 } = require('../controller/authController')
 const {
   signupValidator,
   varifyCodeValidator,
-  loginValidator
+  loginValidator,
+  forgetPasswordValidator,
+  resetPasswordValidator
 } = require('../utils/validators/authValidator')
 
 router.get('/google',
@@ -29,7 +34,11 @@ router.post('/signup', signupValidator, signup);
 
 router.post('/login', loginValidator ,login);
 
-router.post('/varifyResetCode', varifyCodeValidator, varifyResetCode);
+router.post('/varifyResetCodeForSignup', varifyCodeValidator, varifyResetCodeForSignup);
+
+router.post('/forgetPassword', forgetPasswordValidator, forgetPassword);
+router.post('/varifyResetCodeForPassword', varifyCodeValidator, varifyResetCodeForPassword);
+router.post('/resetPassword',resetPasswordValidator,resetPassword)
 
 
 module.exports = router;
